--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<!-- ------------------- preload ------------------->
+ ------------------- preload -----------------
 <!--<div class="preload">-->
 <!--    <div class="lds-ripple"><div></div><div></div></div>-->
 <!--</div>-->
@@ -134,7 +134,7 @@
                                     <li><span class="blueline html"></span><em>HTML</em></li>
                                     <li><span class="blueline css"></span><em>CSS</em></li>
                                     <li><span class="blueline react"></span><em>REACT</em></li>
-                                    <li><span class="blueline vusjs"></span><em>VUEJS</em></li>
+                                    <li><span class="blueline vuejs"></span><em>VUEJS</em></li>
                                 </ul>
                             </div>
                         </div>
@@ -204,8 +204,8 @@
                         </ul>
                     </div>
                     <div class="right-links">
-                        <a href="#"><span class="fab fa-github"></span></a>
                         <a href="#"><span class="fas fa-external-link-alt"></span></a>
+                        <a href="#"><span class="fab fa-github"></span></a>
                     </div>
                 </div>
                 <div class="col-md-5"></div>
@@ -254,8 +254,8 @@
                         </ul>
                     </div>
                     <div class="right-links">
-                        <a href="#"><span class="fab fa-github"></span></a>
                         <a href="#"><span class="fas fa-external-link-alt"></span></a>
+                        <a href="#"><span class="fab fa-github"></span></a>
                     </div>
                 </div>
                 <div class="col-md-5"></div>
