--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body>
 
  ------------------- preload -----------------
-<!--<div class="preload">-->
-<!--    <div class="lds-ripple"><div></div><div></div></div>-->
-<!--</div>-->
+<div class="preload">
+    <div class="lds-ripple"><div></div><div></div></div>
+</div>
 
 
 <!-- ----------------- three js animation content -------------- -->
