--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
- ------------------- preload -----------------
+<!-- ------------------- preload ----------------- -->
 <div class="preload">
     <div class="lds-ripple"><div></div><div></div></div>
 </div>
@@ -44,7 +44,7 @@
     </div>
     <div class="col main-button">
         <a href="#navbar"><button class="btn-hover btn">My portfolio</button></a>
-        <a href="#navbar"><button class="btn-hover btn">Contact me</button></a>
+        <a href="#contact"><button class="btn-hover btn">Contact me</button></a>
     </div>
 </div>
 
@@ -161,12 +161,12 @@
 <section class="works" id="portfolio">
     <div class="container">
         <h2 class="main-title">MY PORTFOLIO</h2>
-        <div class="work">
-            <img src="images/1.png" class="img-works">
-            <div class="necib overlay"></div>
-            <div class="row text" style="text-align: right;">
-                <div class="col-md-5"></div>
-                <div class="col-md-7 mt-5">
+        <div class="row work">
+            <div class="col-5 left-side">
+                <img src="images/1.png" class="img-works">
+                <div class="overlay"></div>
+            </div>
+            <div class="col-7 text mt-5" style="text-align: right;">
                     <h6>Featured Projects</h6>
                     <h3 class="mb-5">Ecommerce Website</h3>
                     <p class="mb-3">Even the all-powerful Pointing has no control about the blind texts it is.
@@ -183,82 +183,102 @@
                         <a href="#"><span class="fab fa-github"></span></a>
                         <a href="#"><span class="fas fa-external-link-alt"></span></a>
                     </div>
+            </div>
+        </div>
+        <div class="row work">
+            <div class="col-7 text mt-5" style="text-align: left;">
+                <h6>Featured Projects</h6>
+                <h3 class="mb-5">Ecommerce Website</h3>
+                <p class="mb-3" >Even the all-powerful Pointing has no control about the blind texts it is.
+                    Even the all powerful Pointing has no control about the blind texts it is.</p>
+                <div class="tech-used">
+                    <ul class="list-unstyled d-flex">
+                        <li>laravel</li>
+                        <li>react</li>
+                        <li>phpmyadmin</li>
+                        <li>postman</li>
+                    </ul>
+                </div>
+                <div class="links">
+                    <a href="#"><span class="fab fa-github"></span></a>
+                    <a href="#"><span class="fas fa-external-link-alt"></span></a>
+                </div>
+            </div>
+            <div class="col-5 left-side d-flex justify-content-end">
+                <img src="images/2.jpg" class="img-works" style="z-index: -2;">
+                <div class="overlay" style="z-index: -1;"></div>
+            </div>
+        </div>
+        <div class="row work">
+            <div class="col-5 left-side">
+                <img src="images/3.jpg" class="img-works">
+                <div class="overlay"></div>
+            </div>
+            <div class="col-7 text mt-5" style="text-align: right;">
+                <h6>Featured Projects</h6>
+                <h3 class="mb-5">Ecommerce Website</h3>
+                <p class="mb-3">Even the all-powerful Pointing has no control about the blind texts it is.
+                    Even the all powerful Pointing has no control about the blind texts it is.</p>
+                <div class="tech-used">
+                    <ul class="list-unstyled d-flex justify-content-end">
+                        <li>laravel</li>
+                        <li>react</li>
+                        <li>phpmyadmin</li>
+                        <li>postman</li>
+                    </ul>
+                </div>
+                <div class="links">
+                    <a href="#"><span class="fab fa-github"></span></a>
+                    <a href="#"><span class="fas fa-external-link-alt"></span></a>
                 </div>
             </div>
         </div>
-        <div class="work">
-            <img src="images/2.jpg" class="img-works" style="left: 50%;">
-            <div class="necib overlay" style="left: 50%;"></div>
-            <div class="row text">
-                <div class="col-md-7 mt-5">
-                    <h6>Featured Projects</h6>
-                    <h3 class="mb-5">Ecommerce Website</h3>
-                    <p class="mb-3">Even the all-powerful Pointing has no control about the blind texts it is.
-                        Even the all powerful Pointing has no control about the blind texts it is.</p>
-                    <div class="right-tech-used">
-                        <ul class="list-unstyled d-flex">
-                            <li>laravel</li>
-                            <li>react</li>
-                            <li>phpmyadmin</li>
-                            <li>postman</li>
-                        </ul>
-                    </div>
-                    <div class="right-links">
-                        <a href="#"><span class="fas fa-external-link-alt"></span></a>
-                        <a href="#"><span class="fab fa-github"></span></a>
-                    </div>
+        <div class="row work">
+            <div class="col-7 text mt-5" style="text-align: left;">
+                <h6>Featured Projects</h6>
+                <h3 class="mb-5">Ecommerce Website</h3>
+                <p class="mb-3" >Even the all-powerful Pointing has no control about the blind texts it is.
+                    Even the all powerful Pointing has no control about the blind texts it is.</p>
+                <div class="tech-used">
+                    <ul class="list-unstyled d-flex">
+                        <li>laravel</li>
+                        <li>react</li>
+                        <li>phpmyadmin</li>
+                        <li>postman</li>
+                    </ul>
                 </div>
-                <div class="col-md-5"></div>
-            </div>
-        </div>
-        <div class="work">
-            <img src="images/3.jpg" class="img-works">
-            <div class="necib overlay"></div>
-            <div class="row text" style="text-align: right;">
-                <div class="col-md-5"></div>
-                <div class="col-md-7 mt-5">
-                    <h6>Featured Projects</h6>
-                    <h3 class="mb-5">Ecommerce Website</h3>
-                    <p class="mb-3">Even the all-powerful Pointing has no control about the blind texts it is.
-                        Even the all powerful Pointing has no control about the blind texts it is.</p>
-                    <div class="tech-used">
-                        <ul class="list-unstyled d-flex justify-content-end">
-                            <li>laravel</li>
-                            <li>react</li>
-                            <li>phpmyadmin</li>
-                            <li>postman</li>
-                        </ul>
-                    </div>
-                    <div class="links">
-                        <a href="#"><span class="fab fa-github"></span></a>
-                        <a href="#"><span class="fas fa-external-link-alt"></span></a>
-                    </div>
+                <div class="links">
+                    <a href="#"><span class="fab fa-github"></span></a>
+                    <a href="#"><span class="fas fa-external-link-alt"></span></a>
                 </div>
             </div>
+            <div class="col-5 left-side d-flex justify-content-end">
+                <img src="images/4.jpg" class="img-works" style="z-index: -2;">
+                <div class="overlay" style="z-index: -1;"></div>
+            </div>
         </div>
-        <div class="work">
-            <img src="images/4.jpg" class="img-works" style="left: 50%;">
-            <div class="necib overlay" style="left: 50%;"></div>
-            <div class="row text">
-                <div class="col-md-7 mt-5">
-                    <h6>Featured Projects</h6>
-                    <h3 class="mb-5">Ecommerce Website</h3>
-                    <p class="mb-3">Even the all-powerful Pointing has no control about the blind texts it is.
-                        Even the all powerful Pointing has no control about the blind texts it is.</p>
-                    <div class="right-tech-used">
-                        <ul class="list-unstyled d-flex">
-                            <li>laravel</li>
-                            <li>react</li>
-                            <li>phpmyadmin</li>
-                            <li>postman</li>
-                        </ul>
-                    </div>
-                    <div class="right-links">
-                        <a href="#"><span class="fas fa-external-link-alt"></span></a>
-                        <a href="#"><span class="fab fa-github"></span></a>
-                    </div>
+        <div class="row work">
+            <div class="col-5 left-side">
+                <img src="images/1.png" class="img-works">
+                <div class="overlay"></div>
+            </div>
+            <div class="col-7 text mt-5" style="text-align: right;">
+                <h6>Featured Projects</h6>
+                <h3 class="mb-5">Ecommerce Website</h3>
+                <p class="mb-3">Even the all-powerful Pointing has no control about the blind texts it is.
+                    Even the all powerful Pointing has no control about the blind texts it is.</p>
+                <div class="tech-used">
+                    <ul class="list-unstyled d-flex justify-content-end">
+                        <li>laravel</li>
+                        <li>react</li>
+                        <li>phpmyadmin</li>
+                        <li>postman</li>
+                    </ul>
                 </div>
-                <div class="col-md-5"></div>
+                <div class="links">
+                    <a href="#"><span class="fab fa-github"></span></a>
+                    <a href="#"><span class="fas fa-external-link-alt"></span></a>
+                </div>
             </div>
         </div>
         <div class="view-more">
@@ -283,17 +303,23 @@
             <h1 class="wobble" data-animation="upscale">Coding is fun.</h1>
         </div>
         <div class="row cards-list">
-            <div class="col-md-4">
-                <div class="card mx-auto"></div>
-                <button class="card-btn position ">Discover more</button>
+            <div class="col-md-4 mx-auto cards">
+                <img src="https://images.unsplash.com/photo-1488628075628-e876f502d67a?dpr=1&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=&bg=" alt="" />
+                <p class="title">card title</p>
+                <div class="overlay"></div>
+                <div class="button"><a href="#"> Discover More </a></div>
             </div>
-            <div class="col-md-4">
-                <div class="card mx-auto"></div>
-                <button class="card-btn position">Discover more</button>
+            <div class="col-md-4 mx-auto cards">
+                <img src="https://images.unsplash.com/photo-1488628075628-e876f502d67a?dpr=1&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=&bg=" alt="" />
+                <p class="title">card title</p>
+                <div class="overlay"></div>
+                <div class="button"><a href="#"> Discover More </a></div>
             </div>
-            <div class="col-md-4">
-                <div class="card mx-auto"></div>
-                <button class="card-btn position">Discover more</button>
+            <div class="col-md-4 mx-auto cards">
+                <img src="https://images.unsplash.com/photo-1488628075628-e876f502d67a?dpr=1&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=&bg=" alt="" />
+                <p class="title">card title</p>
+                <div class="overlay"></div>
+                <div class="button"><a href="#"> Discover More </a></div>
             </div>
         </div>
     </div>
@@ -357,6 +383,7 @@
 
 
 <script src="js/three.min.js"></script>
+ <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/f9c10aff2c.js" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
